fix(start-page-hero.css): :lipstick: alignment & font-size
improve alignment of content to be more left aligned in mobile. Reduce the fluidity of font-sizes on title & subtitle

--- a/app/styles/modules/start-page-hero.css
+++ b/app/styles/modules/start-page-hero.css
@@ -16,7 +16,8 @@
 	--_title-color: var(--text-1);
 	--_text-color: var(--text-2);
 
-	--_title-font-size: var(--font-size-fluid-3);
+	--_title-font-size: clamp(3rem,9vw,3.5rem);
+	--_subtitle-font-size: var(--size-fluid-2);
 	--_svg-size: var(--font-size-1);
 }
 
@@ -25,7 +26,9 @@
 		--_min-height: 750px;
 		--_padding: var(--size-10);
 
-		--_title-font-size: clamp(2.5rem,4vw,3.5rem);
+    
+		--_title-font-size: clamp(3rem,9vw,3.5rem);
+		--_subtitle-font-size: 1.5rem;
 		--_svg-size: var(--font-size-2);
 	}
 }
@@ -72,7 +75,6 @@ section.start-page-hero {
 	grid-template-rows: auto auto 1fr;
 	gap: var(--size-5);
 	flex: 1;
-	justify-content: center;
 }
 
 .start-page-hero-title {
@@ -82,7 +84,7 @@ section.start-page-hero {
 
 .start-page-hero-subtitle {
 	font-weight: var(--font-weight-3);
-	font-size: var(--size-fluid-2);
+	font-size: var(--_subtitle-font-size);
 	max-inline-size: var(--size-fluid-10);
 }
 
